<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafePassBeta</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_msg">Welcome to SafePass!</string>
    <string name="login_msg">Please enter your password to unlock:</string>
    <string name="setup_msg">Please setup a Master Password that meets the following requirements:</string>
    <string name="required_length">Minimum length of 8 characters</string>
    <string name="required_uppercase">At least one uppercase character</string>
    <string name="required_numerical">At least one numerical character</string>
    <string name="required_special">At least one special character</string>
    <string name="master_pass_hint">Master Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="setup_btn">Setup</string>
    <string name="unlock_btn">Unlock</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_logins">Logins</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_notes">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_dashboard">SafePass</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_entries">AddEntriesActivity</string>
    <string name="add">ADD</string>
    <string name="add_label">Label</string>
    <string name="add_username">Username</string>
    <string name="add_password">Password</string>
    <string name="add_website">http:// (Optional)</string>
    <string name="add_comments">Comments (Optional)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="LoginsListItems">
        <item>Copy Password</item>
        <item>Copy Username</item>
        <item>Copy Website</item>
        <item>Copy Comments</item>
        <item>Copy Label</item>
    </array>
    <array name="WalletListItems">
        <item>Copy Card Number</item>
        <item>Copy Card Expiration</item>
        <item>Copy Card Security Code</item>
        <item>Copy Name on Card</item>
        <item>Copy Card Type</item>
    </array>
    <array name="NotesListItems">
        <item>Copy Note</item>
        <item>Copy Title</item>
    </array>

    <string name="title_activity_add_wallet">AddWalletActivity</string>
    <string name="title_activity_add_notes">AddNotesActivity</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>

</resources>
