<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SetupAndLoginActivity"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome_msg"
                android:id="@+id/welcome_title_msg"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/setup_msg"
                android:id="@+id/setup_msg"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/required_length"
                android:id="@+id/required_length"
                android:layout_marginTop="25dp"
                android:clickable="false"
                />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/required_uppercase"
                android:id="@+id/required_uppercase"
                android:layout_marginTop="2dp"
                android:clickable="false"
                />
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/required_numerical"
                android:id="@+id/required_numerical"
                android:layout_marginTop="2dp"
                android:clickable="false"
                />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/required_special"
                android:id="@+id/required_special"
                android:layout_marginTop="2dp"
                android:clickable="false"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/master_pass"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/master_pass_hint"
                android:fontFamily="sans-serif"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirm_pass"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_pass_hint"
                android:fontFamily="sans-serif"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_btn"
                android:id="@+id/setup_btn"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:onClick="setupMasterPassword"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>