<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SetupAndLoginActivity"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/add_label"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_label"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:ems="10"
                android:id="@+id/add_username"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_username"
                android:fontFamily="sans-serif"
                />


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/add_password"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toStartOf="@+id/view_pass"
                    android:layout_toLeftOf="@+id/view_pass"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/add_password"
                    android:fontFamily="sans-serif"
                    />

                <ImageButton
                    android:id="@+id/view_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_device_access_secure"
                    android:padding="3dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:onClick="viewPassword"
                    android:layout_toStartOf="@+id/generate_pass"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/generate_pass"/>

                <ImageButton
                    android:id="@+id/generate_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_device_access_new_account"
                    android:padding="3dp"
                    android:layout_marginTop="7dp"
                    android:background="@null"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:longClickable="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password Strength: N/A"
                android:id="@+id/pass_strength"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="start"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/add_website"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_website"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/add_comments"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_comments"
                android:fontFamily="sans-serif"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>



